kernel/event/error/test/test.cov_fns
H2K_handle_error
H2K_handle_nmi
H2K_handle_rsvd
H2K_handle_trap1
